--- a/omask/public/index.html
+++ b/omask/public/index.html
@@ -19,6 +19,20 @@
       type="text/javascript"
       src="https://openapi.map.naver.com/openapi/v3/maps.js?ncpClientId=fs0aqkdq7k"
     ></script>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=UA-146996551-1"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+
+      gtag("config", "UA-146996551-1");
+    </script>
 
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
