--- a/omask/public/index.html
+++ b/omask/public/index.html
@@ -17,7 +17,7 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <script
       type="text/javascript"
-      src="https://openapi.map.naver.com/openapi/v3/maps.js?ncpClientId=fs0aqkdq7k"
+      src="https://openapi.map.naver.com/openapi/v3/maps.js?ncpClientId=fs0aqkdq7k&submodules=geocoder"
     ></script>
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script
