--- a/omask/public/index.html
+++ b/omask/public/index.html
@@ -5,10 +5,15 @@
     <link rel="icon" href="%PUBLIC_URL%/korea.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+    <meta property="og:url" content="https://0mask.kr/" />
+    <meta property="og:title" content="공마스크 - 공적 마스크 판매처 찾기!" />
+    <meta property="og:type" content="website" />
+    <meta property="og:image" content="../src/Images/mask.jpg" />
     <meta
-      name="description"
-      content="내 주변 마스크 판매 약국을 한눈에 볼 수 있다구?"
+      property="og:description"
+      content="마스크 사고싶어서 만들었다옹 >.<"
     />
+    <meta name="description" content="마스크 사고 싶어서 만들었다옹 >.<" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
