add meta tag image

--- a/omask/public/index.html
+++ b/omask/public/index.html
@@ -8,7 +8,10 @@
     <meta property="og:url" content="https://0mask.kr/" />
     <meta property="og:title" content="공마스크 - 공적 마스크 판매처 찾기!" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="../src/Images/mask.jpg" />
+    <meta
+      property="og:image"
+      content="https://0mask.kr/static/media/dan.8cc9bd05.png"
+    />
     <meta
       property="og:description"
       content="마스크 사고싶어서 만들었다옹 >.<"
